--- a/generator/src/main/resources/generator/generator-config.properties
+++ b/generator/src/main/resources/generator/generator-config.properties
@@ -9,6 +9,6 @@ mapper.plugin=tk.mybatis.mapper.generator.MapperPlugin
 mapper.Mapper=com.guye.sun.mybatis.mapper.BaseMapper
 
 #\u751F\u6210\u5B9E\u4F53\u7C7B\u3001dao\u3001mapper\u6587\u4EF6\u4F4D\u7F6E
-targetModelPackage=com.guye.sun.managent.pojo.po
-targetXMLPackage=com.guye.sun.managent.dao
-targetMapperPackage=com.guye.sun.managent.dao
+targetModelPackage=com.guye.sun.dubbo.pojo.po
+targetXMLPackage=com.guye.sun.dubbo.dao
+targetMapperPackage=com.guye.sun.dubbo.dao
