--- a/managent/src/main/resources/application-dev.yml
+++ b/managent/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 8090
 
 spring:
   application:
-    name: managent
+    name: dubbo
   swagger:
-    base-package: com.guye.sun.managent.controller
+    base-package: com.guye.sun.dubbontroller
   thymeleaf:
     cache: false
 #    enabled: false
@@ -23,7 +23,7 @@ spring:
       max-lifetime: 1765000 #一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒以上
       maximum-pool-size:  15 #连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
   rabbitmq:
-    host: 127.0.0.1
+    host: 127.0.0.23
     username: guye
     password: 1234
     port: 5672
@@ -50,8 +50,8 @@ spring:
 mybatis:
 
   mapper-locations:
-  - classpath:com/guye/sun/managent/dao/*.xml
-  type-aliases-package: com.guye.sun.managent.pojo
+  - classpath:com/guye/sun/dubbo/dao/*.xml
+  type-aliases-package: com.guye.sun.dubbojo
   configuration:
     map-underscore-to-camel-case: true
 
